bookinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookinfo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: productpage
              servicePort: 9080
          - path: /productpage
            backend:
              serviceName: productpage
              servicePort: 9080
          - path: /static/*
            backend:
              serviceName: productpage
              servicePort: 9080
          - path: /login
            backend:
              serviceName: productpage
              servicePort: 9080
          - path: /logout
            backend:
              serviceName: productpage
              servicePort: 9080
          - path: /api/v1/products.*
            backend:
              serviceName: productpage
              servicePort: 9080
